fixing z-index

--- a/theme-framework/styles.css
+++ b/theme-framework/styles.css
@@ -168,7 +168,7 @@ video {
     min-width: 160px;   
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
     padding: 12px 16px;   
-    z-index: 1;
+    z-index: 3;
     font-size: medium;
     color: #34312D;
 }
